# Real-Time-Avateering-Face-Tracking

./: README.md
TestingAvatar/: Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  TestingAvatar.Editor.Plugins.csproj  TestingAvatar.Editor.csproj  TestingAvatar.Plugins.csproj  TestingAvatar.csproj  TestingAvatar.sln  TestingAvatar.userprefs  UpgradeLog.htm
TestingAvatar/Assets/FGC/: Readme.txt
TestingAvatar/Assets/FGC/Cloth/Male_Cloth_WagSuit/: FGC_Male_Cloth_WagSuit.fbx
TestingAvatar/Assets/FGC/Prefabs/: FGC_Male_Char_Brad_Lite.prefab
TestingAvatar/Assets/FGC/Scripts/: FGC_addItem.cs
TestingAvatar/Assets/KinectScripts/: FacetrackingManager.cs  KinectInterop.cs  KinectManager.cs
TestingAvatar/Assets/KinectScripts/Interfaces/: Kinect2Interface.cs
TestingAvatar/Assets/Mixamo Face Plus/Examples/: Example-BlendShape.unity  Example-Fuse.unity  Example-Joint.unity
TestingAvatar/Assets/Mixamo Face Plus/Examples/Animation/: EmptyMask.mask
TestingAvatar/Assets/Mixamo Face Plus/Examples/Character/: BatteryBoy-BlendShape.prefab  BatteryBoy-Joint.prefab  SDK_Definition.txt
TestingAvatar/Assets/_Prefabs/: BatteryBoy.prefab  KinectController.prefab  U_CharacterFront.prefab
TestingAvatar/Assets/_Scenes/: AvatarFaceController.cs  DestManager.cs  FaceTrackingWithServer.unity  FaceTrackingWithSkeleton.unity
UltimateVision/: CMakeLists.txt
UltimateVision/libraries/: dest.lib
UltimateVision/src/: CMakeLists.txt  main.cpp
(+56 files in other folders)
